sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:9: error: ';' expected but 'while' found.
      } while (n > 0)
        ^AlgBubbleSort1:12: error: 'while' expected but '}' found.
} 
^